--- a/src/index.css
+++ b/src/index.css
@@ -15,13 +15,21 @@ code {
     monospace;
 }
 
-.top-page{
-  width: 100vw;
-}
-
-.top-content{
+.content{
   display: flex;
   flex-flow: column;
+  width: 90%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.page{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
 }
 
 section{
@@ -31,6 +39,10 @@ section{
   margin: 0;
 }
 
+/* 共通 */
+.red{
+  color: red;
+}
 .image{
   background-color: #a6a6a6;
 }
@@ -133,4 +145,128 @@ section{
 
 .rid_2{
   background-image: url('./assets/sample_riddle_2.png');
+}
+
+/* footer */
+.footer{
+  height: 100px;
+  width: 100vw;
+  border-top: 1px solid gray;
+}
+
+.footer-content{
+  display: flex;
+  flex-basis: auto;
+}
+.footer-part{
+  width: 25%;
+  height: 100px;
+  background-size: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 60%;
+}
+
+.footer-part-1{
+  background-image: url('./assets/footer_icon_1.jpeg');
+  background-size: 40%;
+
+}
+
+.footer-part-2{
+  background-image: url('./assets/footer_icon_2.jpeg');
+}
+
+.footer-part-3{
+  background-image: url('./assets/footer_icon_3.jpeg');
+}
+
+.footer-part-4{
+  background-image: url('./assets/footer_icon_4.jpeg');
+}
+
+/* home */
+.home-page{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+}
+
+.home-content{
+  padding: 10%;
+  padding-top: 20%;
+  padding-bottom: 20%;
+}
+
+.content-top{
+  width: 100%;
+  height: 100%;
+}
+
+.status-wrap{
+  padding-top: 30px;
+  height: 40%;
+  display: flex;
+}
+
+.status-part-wrap{
+  height: 100px;
+  width: 100px;
+  background-color: #151f28;
+  color: white;
+  border-radius: 10%;
+  padding: 10px;
+}
+
+.number{
+  text-align: center;
+  font-size: 30px;
+  padding: 10px;
+}
+.name-wrap{
+  font-size: 30px;
+}
+
+.nationality{
+
+}
+.content-bottom{
+  width: 100%;
+}
+.content-bottom p{
+  font-size: 16px;
+  text-align: left;
+  width: 100%;
+}
+
+/* mysteries */
+
+.title-wrap{
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 30px;
+  height: 150px;
+}
+
+.title-wrap .title{
+  font-size: 30px;
+}
+
+.mysteries-wrap{
+  width: 100%;
+  height: 33%;
+}
+
+.mysteries-wrap .mysteries-status{
+  font-weight: bold;
+}
+
+/* cards */
+.cards-title-wrap{
+  height: 150px;
+}
+
+.cards-container{
+  height: auto;
 }
