--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   max-width: 500px;
   margin: auto;
 }
+
 body {
   margin: 0;
   font-family: Georgia, serif;
@@ -23,6 +24,8 @@ code {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  overflow: scroll;
+  padding-bottom: 100px;
 }
 
 .page{
@@ -43,6 +46,7 @@ section{
 .red{
   color: red;
 }
+
 .image{
   background-color: #a6a6a6;
 }
@@ -152,6 +156,9 @@ section{
   height: 100px;
   width: 100vw;
   border-top: 1px solid gray;
+  position: fixed;
+  bottom: 0;
+  background-color: white;
 }
 
 .footer-content{
@@ -164,7 +171,7 @@ section{
   background-size: 50%;
   background-position: center;
   background-repeat: no-repeat;
-  opacity: 60%;
+  opacity: 0.6;
 }
 
 .footer-part-1{
@@ -256,17 +263,92 @@ section{
 .mysteries-wrap{
   width: 100%;
   height: 33%;
+
+}
+
+.mysteries{
+  display: flex;
+  flex-direction: row;
+  overflow-y: scroll;
+  height: 50%;
+}
+
+.mystery{
+  height: 100%;
+  flex-basis: 100%;
+  width: 300px;
+}
+
+.mystery-content{
+  width: 33vw;
+  height: 100%;
+  margin-right: 10px;
+  background-color: #151f28;
+  border-radius: 10px;
 }
 
 .mysteries-wrap .mysteries-status{
   font-weight: bold;
+  padding-bottom: 15px;
 }
 
 /* cards */
+.cards-content{
+  justify-content: start;
+}
+
 .cards-title-wrap{
-  height: 150px;
+  height: 120px;
+  padding: 0;
+  padding-top: 60px;
 }
 
 .cards-container{
-  height: auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  padding: 20px 0;
+  margin: 0;
+}
+
+.card-wrap{
+  width: 50%;
+  padding: 10px 10%;
+}
+
+.card{
+  height: 150px;
+  background-color: #a6a6a6;
+}
+
+.card-info{
+  height: 100%;
+  width: 100%;
+  background-color: #151f28;
+  opacity: 0.7;
+}
+
+.card-wrap .cards-name{
+  color: white;
+  text-align: center;
+  padding-top: 50%;
+}
+
+/* rank */
+.ranks-content{
+  justify-content: start;
+}
+
+.title-wrap{
+  margin: 0;
+}
+.rank{
+  display: flex;
+  flex-direction: row;
+}
+
+.ranks-container{
+  width: 100%;
+  margin: 0;
 }
