--- a/src/index.css
+++ b/src/index.css
@@ -203,7 +203,7 @@ section{
 .home-content{
   padding: 10%;
   padding-top: 20%;
-  padding-bottom: 20%;
+  padding-bottom: 50%;
 }
 
 .content-top{
@@ -350,5 +350,68 @@ section{
 
 .ranks-container{
   width: 100%;
+  margin: 0;
+}
+
+/* signuppop, loginpop */
+
+.pop{
+  height: 100vh;
+  width:  100vw;
+  position: fixed;
+  top:0;
+  left:0;
+  padding: 10%;
+  background-color: rgba(0,0,0,0.6);
+  display: none;
+}
+
+.pop-content{
+  background-color: #e1e8e1;
+  padding: 10%;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+}
+
+.pop .title-wrap{
+  height: 100px;
+  padding-top: 10%;
+  padding-bottom: 0;
+}
+
+.pop .title-wrap .title{
+  text-align: center;
+}
+
+.login-pop-content{
+  height: 60%;
+}
+
+.signup-pop-content{
+  height: 80%;
+}
+
+.field-wrap{
+  padding-bottom: 10px;
+  margin: 0 auto;
+}
+
+.signup-pop-content .title-wrap{
+  
+}
+.signup-pop-content .title{
+  font-size: 20px;
+}
+
+.shown{
+  display: block !important;
+}
+
+.close-button{
+  width: 100%;
+  text-align: right;
+  height: 10px;
   margin: 0;
 }
