--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.no_scroll{
+  overflow: hidden;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -369,6 +373,7 @@ section{
 .pop-content{
   background-color: #e1e8e1;
   padding: 10%;
+  padding-top:0;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -407,6 +412,13 @@ section{
 
 .shown{
   display: block !important;
+}
+
+.close-button-wrap{
+  height: 60px;
+  width: 100%;
+  margin: 0;
+  padding-top: 10%;
 }
 
 .close-button{
