doc全取得関数追加,UIタイトル英語に変更,homeロジック完成,signupロジック完成

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 body {
   margin: 0;
-  font-family: Georgia, serif;
+  font-family:'Noto Serif JP', Georgia, serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
