--- a/src/index.css
+++ b/src/index.css
@@ -501,6 +501,15 @@ section{
 .rank .name-wrap{
   margin-left: 0;
 }
+.totalscore-wrap{
+  width: 100%;
+  height: 100%;
+}
+.totalscore{
+  font-size: 20px;
+  width: 60%;
+  text-align: right;
+}
 
 /* signuppop, loginpop */
 
