--- a/src/index.css
+++ b/src/index.css
@@ -235,14 +235,15 @@ section{
 }
 
 .home-content{
-  padding: 10%;
+  padding:0 10%;
   /* padding-top: 20%; */
   padding-bottom: 50%;
 }
 
 .content-top{
   width: 100%;
-  height: 100%;
+  height: 60%;
+  margin-bottom: 0;
 }
 
 .status-wrap{
@@ -286,6 +287,7 @@ section{
 }
 .content-bottom{
   width: 100%;
+  margin-top: 0;
 }
 .content-bottom p{
   font-size: 16px;
